--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -477,6 +477,11 @@ es:
 
   date:
     yesterday: Ayer
+    formats: 
+      default: ""
+      long: ""
+      short: ""
+    order: [ :day, :month, :year ]    
 
   emailer:
     common: 
