Translating user navigation Forbidding /user/:id/edit Adding es locale to localized_country_select

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -472,6 +472,10 @@ en:
       project_invitations: "Invitations ({{count}})"
       signup: Signup
       settings: Settings
+    user_navigation:
+      account_settings: Account Settings
+      profile_information: Profile Information
+      profile_picture: Profile Picture
     footer:
       help: Help
 
