added spanish translations for watchers

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -8,8 +8,6 @@ es:
     edit: Editar
     accept: Aceptar
     decline: Rechazar
-    people_watching: "Siguiendo esta conversación: "
-    nobody_watching: "Nadie está siguiendo esta conversación."
     cancel: Cancelar
     save: Guardar
   confirm:
@@ -263,8 +261,6 @@ es:
       edit: Editar título
       message: mensaje
       messages: mensajes
-      unwatch: Dejar de seguir esta conversación
-      watch: Seguir esta conversación
     short_conversation:
       comment: respuesta
       comments: respuestas
@@ -281,8 +277,6 @@ es:
       submit: Crear
     show:
       title: "Tarea: {{name}}"
-      watch: Seguir esta tarea
-      unwatch: Dejar de seguir esta tarea
     link:
       new: + Nueva tarea
       edit: Editar
@@ -384,8 +378,6 @@ es:
       view_archived: "Ver {{number}} tareas archivadas"
     show:
       title: "Lista de tareas: {{name}}"
-      watch: Seguir esta lista de tareas
-      unwatch: Dejar de seguir esta lista
     destroy_message:
       deleted: "La lista <b>{{name}}</b> ha sido borrada!"
   people:
@@ -482,7 +474,11 @@ es:
       profile_picture: Imagen
     footer:
       help: Ayuda
-
+    watchers:
+      unwatch: Dejar de seguir
+      watch: Seguir      
+      people_watching: "Siguiendo este elemento: "
+      nobody_watching: "Nadie sigue los cambios de este elemento"
   date:
     yesterday: Ayer
     formats: 
