Adding support link and help links to Tender

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -473,6 +473,7 @@ en:
       profile_information: Profile Information
       profile_picture: Profile Picture
     footer:
+      support: "Feedback and bugs"
       help: Help
     watchers:
       unwatch: Unwatch
